@@ -113,7 +113,8 @@ TESTS =						\
   tests/premature-termination.scm		\
   tests/priorities.scm				\
   tests/hmac.scm				\
-  tests/hash.scm
+  tests/hash.scm				\
+  tests/aead.scm
 
 if ENABLE_SRP
 TESTS +=					\
@@ -138,4 +139,6 @@ EXTRA_DIST +=					\
   examples/hmac-example-1.scm                   \
   examples/hmac-example-2.scm                   \
   examples/hmac-example-3.scm                   \
-  examples/hash-example.scm
+  examples/hash-example.scm                     \
+  examples/aead-encrypt-example.scm             \
+  examples/aead-decrypt-example.scm
